# chatterbox-inference-thing

./: .gitignore  EMOTIONAL_PROSODY_SYSTEM.md  README.md  SETUP.md  TTS_ABSTRACTION.md  emotions_to_convey.txt  main.py  pyproject.toml  restart_server.sh  test_endpoint.py  test_zmq_config.py  tts-inference.sh
.claude/rules/: python-style.md
.clinerules/: 1-styleguide.md
client/: README.md  pyproject.toml
client/src/chatterbox_inference_client/: __init__.py  base.py  exceptions.py  http_client.py  zmq_client.py
client/src/tts_inference_client/: __init__.py  base.py  exceptions.py  http_client.py  schemas.py  zmq_client.py
docs/: QWEN_FINETUNING_RESEARCH.md
docs/legacy/: IMPLEMENTATION_SUMMARY.md  QWEN_TTS_ANALYSIS.md  QWEN_TTS_CORRECTED_ANALYSIS.md
examples/: example_usage.py
plans/: redundancy_analysis.md
src/chatterbox_inference/: __init__.py  cli.py
src/chatterbox_inference/auth/: __init__.py  api_key.py
src/chatterbox_inference/emotion_map/: __init__.py  acoustic_features.py  anchor_generator.py  prompt_templates_seed.sql
src/chatterbox_inference/models/: __init__.py  database.py  migrations.py  schemas.py
src/chatterbox_inference/server/: __init__.py  dependencies.py  fastapi_server.py  zmq_server.py
src/chatterbox_inference/server/rest_routes/: __init__.py  generation.py  utilities.py  voices.py
src/chatterbox_inference/server/zmq_routes/: __init__.py  generation_handler.py  utility_handler.py  voice_handler.py
src/chatterbox_inference/services/: __init__.py  model_service.py  tts_service.py  voice_service.py
src/chatterbox_inference/tts/: __init__.py  engine.py  voice_manager.py
src/chatterbox_inference/utils/: __init__.py  audio_utils.py  config.py
src/tts/: __init__.py  cli.py
src/tts/auth/: __init__.py
src/tts/models/: __init__.py  migrations.py  schemas.py  service_dataclasses.py
src/tts/server/: common.py  fastapi_server.py  zmq_server.py
src/tts/server/rest_routes/: generation.py  utilities.py  voices.py
src/tts/server/zmq_routes/: __init__.py  generation_handler.py  utility_handler.py  voice_handler.py
src/tts/services/: __init__.py  database_service.py  model_service.py  tts_service.py  voice_service.py
src/tts/tts/: base_tts.py  chatterbox_tts.py  engine.py  fish_speech_tts.py  omnivoice_tts.py
src/tts/utils/: audio_utils.py  config.py
src/tts_inference/: cli.py
src/tts_inference/auth/: api_key.py
src/tts_inference/emotion_map/: acoustic_features.py  anchor_generator.py  migrations_definition.py
src/tts_inference/models/: __init__.py  database.py  schemas.py  service_dataclasses.py
src/tts_inference/server/: __init__.py  common.py  fastapi_server.py  zmq_server.py
src/tts_inference/server/rest_routes/: generation.py  voices.py
src/tts_inference/server/zmq_routes/: __init__.py  generation_handler.py  utility_handler.py  voice_handler.py
src/tts_inference/services/: __init__.py  emotional_anchor_service.py  synthesis_queue.py  tts_service.py  voice_service.py
src/tts_inference/tts/: __init__.py  base_tts.py  chatterbox_tts.py  engine.py  omnivoice_tts.py  qwen_tts.py  qwen_voice_cache.py  voice_manager.py
src/tts_inference/utils/: __init__.py  config.py  logging.py
