[project]
name = "tts-inference"
version = "0.1.0"
description = "TTS inference server with FastAPI and ZMQ streaming support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pyzmq>=26.0",
    "click>=8.1.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "onnxruntime<1.20.0",
    "onnx<1.17",
    "ml_dtypes<0.5",
    "setuptools>=80.9.0",
    "peft>=0.18.0",
    # Acoustic feature extraction (Phase 3)
    "torchaudio>=2.1.0",
    "librosa>=0.10.0",
    "pyworld>=0.3.4",
    "crepe>=0.0.13",
    "scipy>=1.11.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
chatterbox = [
    "chatterbox-tts>=0.1.6",
]
qwen = [
    "qwen-tts>=0.0.5",
    "flash-attn>=2.0.0",
]

[project.scripts]
tts-inference = "tts_inference.cli:main"

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
