[project]
name = "tts-inference"
version = "0.1.0"
description = "TTS inference server with FastAPI and ZMQ streaming support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pyzmq>=26.0",
    "click>=8.1.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "setuptools>=80.9.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
chatterbox = [
    "chatterbox-tts>=0.1.6",
    "onnxruntime<1.20.0",
    "onnx<1.17",
    "ml_dtypes<0.5",
    "peft>=0.18.0",
]
omnivoice = [
    "omnivoice>=0.1.5",
]
fish-speech = [
    "fish-speech @ git+https://github.com/fishaudio/fish-speech.git",
]

[project.scripts]
tts-inference = "tts.cli:main"

[tool.uv]
conflicts = [
  [
    { extra = "chatterbox" },
    { extra = "omnivoice" },
    { extra = "fish-speech" },
  ],
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
